<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".newTourFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/tourName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_event_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/whereToGo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/where_to_go"
            android:inputType="text" />

        <EditText
            android:id="@+id/tourBudget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/your_initial_budget"
            android:inputType="text" />

        <Button
            android:id="@+id/saveTour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>