<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/louncherFragment">
    <action
        android:id="@+id/action_homeFragment_to_tourDetailsFragment"
        app:destination="@id/tourDetailsFragment">
        <argument
            android:name="tourId"
            app:argType="string" />
    </action>

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.tourapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/tourDetailsAction"
            app:destination="@id/tourDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.tourapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.tourapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/mav_wather"
        android:name="com.example.tourapp.mav_wather"
        android:label="fragment_mav_wather"
        tools:layout="@layout/fragment_mav_wather" />
    <fragment
        android:id="@+id/tourDetailsFragment"
        android:name="com.example.tourapp.tourDetailsFragment"
        android:label="fragment_tour_details"
        tools:layout="@layout/fragment_tour_details" />
    <fragment
        android:id="@+id/newTourFragment"
        android:name="com.example.tourapp.newTourFragment"
        android:label="fragment_new_tour"
        tools:layout="@layout/fragment_new_tour" />
    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.tourapp.nav_map"
        android:label="fragment_nav_map"
        tools:layout="@layout/fragment_nav_map" />
    <fragment
        android:id="@+id/nav_tour_list"
        android:name="com.example.tourapp.nav_tour_list"
        android:label="fragment_nav_tour_list"
        tools:layout="@layout/fragment_nav_tour_list" />

    <fragment
        android:id="@+id/louncherFragment"
        android:name="com.example.tourapp.louncherFragment"
        android:label="fragment_louncher"
        tools:layout="@layout/fragment_louncher" >
        <action
            android:id="@+id/tour_list_action"
            app:destination="@id/nav_tour_list"
            app:popUpTo="@id/louncherFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/login_action"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/louncherFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.tourapp.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" />
</navigation>